<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_black"
                android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/membership_card"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/str_dms_dmsl"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textViewValidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/validity"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewSeriolNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/seriol_no"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/str_dms_name"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewFatherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:text="@string/father_husband"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewOccupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:text="@string/vyvsay"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewPermanent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="left"
                android:paddingLeft="15dp"
                android:text="@string/permanent_address"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:paddingLeft="15dp"
                android:text="@string/local_address"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:paddingLeft="15dp"
                android:text="@string/str_dms_mobileno"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/border_black"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/rule_niyam"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/card_back_1"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="15dp"
                android:text="@string/card_back_2"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="15dp"
                android:text="@string/card_back_3"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="15dp"
                android:text="@string/card_back_4"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="15dp"
                android:text="@string/card_back_5"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:paddingLeft="15dp"
                android:text="@string/card_back_6"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="संतोष यादव"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/president"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(9889175381)"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="राम नाथ"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/secetry"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(9956956628)"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


            <!-- Overlay that dims the screen -->
        </LinearLayout>


    </ScrollView>
    <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent" />

    <!-- Circular reveal container for the sheet -->
    <io.codetail.widget.RevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <!-- Sheet that contains your items -->
        <androidx.cardview.widget.CardView
            android:id="@+id/fab_sheet"
            android:visibility="gone"
            style="@style/Widget.MaterialSheetFab.Sheet">

            <!-- Sheet items -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Photo -->
                <TextView
                    android:id="@+id/fab_sheet_item_photo"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:drawableLeft="@mipmap/ic_photo_camera_grey600_24dp"
                    android:drawableStart="@mipmap/ic_photo_camera_grey600_24dp"
                    android:text="Print" />

                <!-- Note -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark">

                    <TextView
                        android:id="@+id/fab_sheet_item_note"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@mipmap/ic_create_grey600_24dp"
                        android:drawableStart="@mipmap/ic_create_grey600_24dp"
                        android:text="Log Out" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </io.codetail.widget.RevealLinearLayout>
    <com.govt.updms.util.Fab
        android:id="@+id/fab"
        style="@style/Widget.MaterialSheetFab.Fab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true" />

</RelativeLayout>